@@ -1,6 +1,6 @@
 /**
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
- * @version     $Revision: 1.8 $
+ * @version     $Revision: 1.9 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  */
@@ -39,6 +39,7 @@
 .OverviewMedium li div.Content {
     padding-top: 12px;
     padding-bottom: 0px;
+    cursor: pointer;
 }
 
 .OverviewMedium li div.Shadow {
