@@ -1,6 +1,6 @@
 /**
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
- * @version     $Revision: 1.8 $
+ * @version     $Revision: 1.9 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  */
@@ -67,6 +67,10 @@
 }
 .Overview.FixedHeader thead tr th.Last {
     background-position: center bottom;
+}
+
+.Overview.FixedHeader table tbody tr {
+    cursor: pointer;
 }
 
 } /* end @media */
